--- a/views/chats.html
+++ b/views/chats.html
@@ -69,7 +69,7 @@
                                         <tr ng-repeat="item in vm.items">
                                             <td><input type="checkbox"></td>
                                             <td class="client-avatar"><img alt="image" src="{{item.client.photo}}"> </td>
-                                            <td><a class="client-link">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.lastMessage}}</small></td>
+                                            <td><a class="client-link" ui-sref="chats.view({id: item.id})">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.lastMessage}}</small></td>
                                             <td>{{item.date}}</td>
                                             <td>{{item.time}}</td>
                                             <td align="center">
@@ -84,7 +84,7 @@
 
                                                 <button type="button" class="btn btn-outline btn-success"><i class="fa fa-edit"></i> Editar</button>
                                                 <button type="button" class="btn btn-outline btn-success"><i class="fa fa-tasks"></i> Archivar</button>
-                                                <button type="button" class="btn btn-outline btn-success"><i class="fa fa-trash-o"></i> Borrar</button>
+                                                
 
                                             </td>
                                         </tr>
