--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -38,6 +38,7 @@
                 <ul class="nav nav-second-level" ng-class="{in: $state.includes('meetings')}">
                     <li ui-sref-active="active"><a ui-sref="meetings.index">Listado de citas</a></li>
                     <li ui-sref-active="active"><a ui-sref="meetings.new">Crear cita</a></li>
+                    <li ui-sref-active="active"><a ui-sref="meetings.search">Buscador</a></li>
                 </ul>
             </li>
 
