--- a/views/meetings.html
+++ b/views/meetings.html
@@ -1,6 +1,6 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Citas pendientes</h2>
+        <h2>Citas</h2>
 
         <ol class="breadcrumb">
             <li>
@@ -23,9 +23,15 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="ibox">
+                
+
+                <div class="ibox-title">
+                    <h2>Citas pendientes</h2>
+                </div>
+
+
                 <div class="ibox-content">
-                    <span class="text-muted small pull-right">  </span>
-                    <h2>Citas</h2>
+                    
                     
                     
                     <div class="clients-list">
@@ -56,10 +62,10 @@
                                     <tbody>
 
 
-                                        <tr ng-repeat="item in vm.items">
+                                        <tr ng-repeat="item in vm.meetings">
                                             <td><input type="checkbox"></td>
                                             <td class="client-avatar"><img alt="image" src="{{item.client.photo}}"> </td>
-                                            <td><a class="client-link">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.comments}}</small></td>
+                                            <td><a class="client-link">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.subject}}</small></td>
                                             <td>{{item.date}}</td>
                                             <td>{{item.time}}</td>
                                             <td>Medio de contacto: {{item.client.contact}}<br/>Descripción: {{item.client.contact_address}}</td>
