--- a/views/meetings_search.html
+++ b/views/meetings_search.html
@@ -10,7 +10,7 @@
                 <a>Citas</a>
             </li>
             <li class="active">
-            <strong>Buscador de citas</strong>
+                <strong>Buscador de citas</strong>
             </li>
         </ol>
         
@@ -19,9 +19,9 @@
 
     </div>
 </div>
-<div class="wrapper wrapper-content  animated fadeInRight" ng-controller="MeetingsCtrl">
+<div class="wrapper wrapper-content  animated fadeInRight" ng-controller="MeetingsCtrl as vm">
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-12">
             <div class="ibox">
 
                 <div class="ibox-title">
@@ -31,63 +31,157 @@
 
                 <div class="ibox-content">
 
-                    <form class="form-horizontal">
-                        
-                        <div class="form-group">
-                            <label class="col-lg-2 control-label">Cliente</label>
-                            <div class="col-lg-10">
-                                <select chosen class="form-control">
-                                    <option>Seleccione cliente</option>
-                                    <option>Cliente 1</option>
-                                    <option>Cliente 2</option>
-                                    <option>Cliente 3</option>
-                                    <option>Cliente 4</option>
-                                </select>
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <label class="col-lg-2 control-label">Asunto</label>
-                            <div class="col-lg-10">
-                                <input type="text" placeholder="Asunto" class="form-control">
-                            </div>
-                        </div>
+                    <div class="row">
+                        <div class="col-sm-6">
 
-                        <div class="form-group">
-                            <label class="col-lg-2 control-label">Descripción</label>
-                            <div class="col-lg-10">
-                                <input type="text" placeholder="Descripción" class="form-control">
-                            </div>
-                        </div>
+                            <form class="form-horizontal">
 
-                        <div class="form-group">
-                            <div class="col-lg-offset-2 col-lg-10 pull-right">
-                                <div class="pull-right">
-                                    <button type="submit" class="btn btn-w-m btn-success"><i class="fa fa-check"></i> Buscar</button>
-                                    <button type="button" class="btn btn-outline btn-success"><i class="fa fa-ban"></i> Cancelar</button>
+                                <div class="form-group">
+                                    <label class="col-lg-2 control-label">Cliente</label>
+                                    <div class="col-lg-10">
+                                        <select chosen 
+                                        data-placeholder="Seleccione cliente"
+                                        ng-model="vm.search.client"
+                                        ng-options="client as client.name + ' ' + client.lastName for client in vm.clients"
+                                        class="form-control" >
+                                        <option value=""></option>
+                                    </select>
                                 </div>
                             </div>
-                        </div>
 
-                    </form>
+                            <div class="form-group">
+                                <label class="col-lg-2 control-label">Asunto</label>
+                                <div class="col-lg-10">
+                                    <input ng-model="vm.search.subject" type="text" placeholder="Asunto" class="form-control">
+                                </div>
+                            </div>
 
-                    <script>
+                            <div class="form-group">
+                                <label class="col-lg-2 control-label">Descripción</label>
+                                <div class="col-lg-10">
+                                    <input ng-model="vm.search.description" type="text" placeholder="Descripción" class="form-control">
+                                </div>
+                            </div>
 
-                        $(function(){
-                            $('.clockpicker').clockpicker();
-                        });
+                            <div class="form-group">
+                                <div class="col-lg-offset-2 col-lg-10 pull-right">
+                                    <div class="pull-right">
+                                        <button type="button" class="btn btn-w-m btn-success" ng-click="vm.doSearch()"><i class="fa fa-check"></i> Buscar</button>
+                                        <button type="button" class="btn btn-outline btn-success" ng-click="vm.cancelSearh()"><i class="fa fa-ban"></i> Cancelar</button>
+                                    </div>
+                                </div>
+                            </div>
 
-                    </script>
+                        </form>
 
+
+
+
+                    </div>
                 </div>
+
+
+
+
             </div>
-        </div>
 
 
 
 
 
-    </div>
+
+
+
+
+
+
+
+
+
+            <div class="ibox-content" ng-show="vm.isSearch">
+                <h2>
+                    {{vm.search.results.length}} citas encontradas <span class="text-navy"></span>
+                </h2>
+                <small></small>
+
+
+
+                <div class="clients-list">
+
+
+                    <div class="full-height-scroll" full-scroll>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover footable" data-page-size="5">
+
+
+
+
+                                <thead>
+                                    <tr>
+                                        <th data-sort-ignore="true"></th>
+                                        <th style="width: 150px;" >Fecha</th>
+                                        <th data-sort-ignore="true"></th>
+                                    </tr>
+                                </thead>
+
+
+
+
+                                <tbody>
+
+
+                                    <tr ng-repeat="meeting in vm.search.results">
+
+                                        <td>
+                                            <div class="search-result">
+                                                <h3><a href="#">{{meeting.client.name}} {{meeting.client.lastName}}</a></h3>
+                                                <a href="#" class="search-link">{{meeting.subject}}</a>
+                                                <p>
+                                                    {{meeting.description}}
+                                                </p>
+                                            </div>
+                                        </td>
+                                        <td>{{meeting.date}}</td>
+                                        <td>
+
+                                            <button type="button" class="btn btn-w-m btn-success"><i class="fa fa-edit"></i> Editar</button>
+                                            
+
+
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+
+                                <tfoot class="hide-if-no-paging">
+                                    <tr>
+                                        <td colspan="3" align="center">
+                                          <ul class="pagination"></ul>
+                                      </td>
+                                  </tr>
+                              </tfoot>
+
+
+                          </table>
+                      </div>
+                  </div>
+
+              </div>
+
+
+          </div>
+
+
+
+      </div>
+  </div>
+
+
+
+
+
+</div>
 </div>
 
 
