--- a/views/templates/newMeetingForm.html
+++ b/views/templates/newMeetingForm.html
@@ -4,7 +4,7 @@
         <div class="col-lg-10">
             <div class="input-group date">
                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                <input type="datetime" class="form-control" date-time ng-model="sampleDate" view="date" auto-close="true" min-view="date" format="DD-MM-YYYY">
+                <input id="date" type="datetime" class="form-control" date-time ng-model="vm.form.date" view="date" auto-close="true" min-view="date" format="DD-MM-YYYY">
             </div>
         </div>
     </div>
@@ -15,7 +15,7 @@
 
             <div class="input-group clockpicker" data-autoclose="true">
                 <span class="input-group-addon"><span class="fa fa-clock-o"></span></span>
-                <input type="text" class="form-control" value="09:30">
+                <input id="time" type="text" class="form-control" value="09:30" >
             </div>
 
 
@@ -27,7 +27,7 @@
         <div class="col-lg-10">
             <select chosen 
                     data-placeholder="Seleccione ubicación"
-                    ng-model="vm.search.location"
+                    ng-model="vm.form.location"
                     class="form-control" >
 
                 <option>Sala 1</option>
@@ -47,7 +47,7 @@
         <div class="col-lg-10">
             <select chosen 
                     data-placeholder="Seleccione cliente"
-                    ng-model="vm.search.client"
+                    ng-model="vm.form.client"
                     ng-options="client as client.name + ' ' + client.lastName for client in vm.clients"
                     class="form-control" >
                     <option value=""></option>
@@ -58,21 +58,21 @@
     <div class="form-group">
         <label class="col-lg-2 control-label">Asunto</label>
         <div class="col-lg-10">
-            <input type="text" placeholder="Asunto" class="form-control">
+            <input type="text" placeholder="Asunto" class="form-control" ng-model="vm.form.subject">
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-lg-2 control-label">Descripción</label>
         <div class="col-lg-10">
-            <textarea class="form-control" placeholder="Descripción"></textarea>
+            <textarea class="form-control" placeholder="Descripción" ng-model="vm.form.description"></textarea>
         </div>
     </div>
 
     <div class="form-group">
         <div class="col-lg-offset-2 col-lg-10 pull-right">
             <div class="pull-right">
-                <button type="submit" class="btn btn-w-m btn-success"><i class="fa fa-check"></i> Crear cita</button>
+                <button type="submit" class="btn btn-w-m btn-success" ng-click="vm.submitForm();"><i class="fa fa-check"></i> Crear cita</button>
                 <button type="button" class="btn btn-outline btn-success"><i class="fa fa-ban"></i> Cancelar</button>
             </div>
         </div>
