--- a/views/templates/newMeetingForm.html
+++ b/views/templates/newMeetingForm.html
@@ -4,7 +4,7 @@
         <div class="col-lg-10">
             <div class="input-group date">
                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                <input id="date" type="datetime" class="form-control" date-time ng-model="vm.form.date" view="date" auto-close="true" min-view="date" format="DD-MM-YYYY">
+                <input id="date" type="datetime" class="form-control" date-time ng-model="vm._date" view="date" auto-close="true" min-view="date" format="DD-MM-YYYY">
             </div>
         </div>
     </div>
