--- a/views/meetings.html
+++ b/views/meetings.html
@@ -48,8 +48,8 @@
                                         <tr>
                                             <th style="width: 40px;" data-sort-ignore="true"></th>
                                             <th style="width: 40px;" data-sort-ignore="true"></th>
-                                            <th data-sort-initial="true">Cliente</th>
-                                            <th style="width: 150px;" >Fecha</th>
+                                            <th>Cliente</th>
+                                            <th style="width: 150px;" data-sort-initial="descending">Fecha</th>
                                             <th style="width: 150px;" >Hora</th>
                                             <th style="" >Contacto</th>
                                             <th data-sort-ignore="true"></th>
