Orden en buscador de citas

--- a/views/meetings_search.html
+++ b/views/meetings_search.html
@@ -120,7 +120,7 @@
                                 <thead>
                                     <tr>
                                         <th data-sort-ignore="true"></th>
-                                        <th style="width: 150px;" >Fecha</th>
+                                        <th style="width: 150px;" data-sort-initial="descending">Fecha</th>
                                         <th data-sort-ignore="true"></th>
                                     </tr>
                                 </thead>
