--- a/views/meetings.html
+++ b/views/meetings.html
@@ -65,7 +65,7 @@
                                         <tr ng-repeat="item in vm.meetings">
                                             <td><input type="checkbox"></td>
                                             <td class="client-avatar"><img alt="image" src="{{item.client.photo}}"> </td>
-                                            <td><a class="client-link">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.subject}}</small></td>
+                                            <td><a class="client-link" ui-sref="meetings.edit({id: item.id})">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.subject}}</small></td>
                                             <td>{{item.date}}</td>
                                             <td>{{item.time}}</td>
                                             <td>Medio de contacto: {{item.client.contact}}<br/>Descripción: {{item.client.contact_address}}</td>
