--- a/views/chat_view.html
+++ b/views/chat_view.html
@@ -34,10 +34,21 @@
                     <div class="row">
                         <div class="col-lg-6 col-lg-offset-6">
                             <div class="input-group">
+
+                                
+
                                 <input type="text" placeholder="Buscar" class="input form-control">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn btn-success"> <i class="fa fa-search"></i> Buscar</button>
-                                </span>
+                                
+                                
+
+
+                                <div class="input-group-btn">
+                                    <button data-toggle="dropdown" class="btn btn-white dropdown-toggle" type="button">¿Dónde buscar? <span class="caret"></span></button>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Buscar en esta conversación</a></li>
+                                        <li><a href="#">Buscar en conversaciones</a></li>
+                                    </ul>
+                                </div>
                             </div>        
                         </div>
                     </div>
