--- a/views/chats.html
+++ b/views/chats.html
@@ -78,12 +78,12 @@
                                             <td>{{item.date}}</td>
                                             <td>{{item.time}}</td>
                                             <td align="center">
-                                                <span ng-if="item.messagesUnread > 0"><i class="fa fa-envelope"></i> {{item.messagesUnread}}</span>
-                                                <span ng-if="item.messagesUnread < 1"><i class="fa fa-envelope-o"></i></span>
+                                                <span ng-if="item.messagesUnread > 0"><i class="fa fa-envelope" style="font-size: 1.5em;"></i> {{item.messagesUnread}}</span>
+                                                <span ng-if="item.messagesUnread < 1"><i class="fa fa-envelope-o" style="font-size: 1.5em;"></i></span>
                                             </td>
                                             <td align="center">
-                                                <span ng-if="item.star > 0"><i class="fa fa-star"></i></span>
-                                                <span ng-if="item.star < 1"><i class="fa fa-star-o"></i></span>
+                                                <span ng-if="item.star > 0"><i class="fa fa-star" style="font-size: 2.0em; color: yellow;"></i></span>
+                                                <span ng-if="item.star < 1"><i class="fa fa-star-o" style="font-size: 2.0em; color: yellow;"></i></span>
                                             </td>
                                             <td>
 
