Modificaciones en buscador de clientes

--- a/views/chats.html
+++ b/views/chats.html
@@ -82,8 +82,8 @@
                                                 <span ng-if="item.messagesUnread < 1"><i class="fa fa-envelope-o" style="font-size: 1.5em;"></i></span>
                                             </td>
                                             <td align="center">
-                                                <span ng-if="item.star > 0"><i class="fa fa-star" style="font-size: 2.0em; color: yellow;"></i></span>
-                                                <span ng-if="item.star < 1"><i class="fa fa-star-o" style="font-size: 2.0em; color: yellow;"></i></span>
+                                                <span ng-if="item.star > 0"><i class="fa fa-star" style="font-size: 2.0em; "></i></span>
+                                                <span ng-if="item.star < 1"><i class="fa fa-star" style="font-size: 2.0em; color: orange;"></i></span>
                                             </td>
                                             <td>
 
