--- a/views/templates/newMeetingForm.html
+++ b/views/templates/newMeetingForm.html
@@ -46,9 +46,9 @@
         <label class="col-lg-2 control-label">Cliente</label>
         <div class="col-lg-10">
             <select chosen 
-                    data-placeholder="Seleccione cliente"
+                    data-placeholder="Seleccione cliente o Id Altamira"
                     ng-model="vm.form.client"
-                    ng-options="client as client.name + ' ' + client.lastName for client in vm.clients"
+                    ng-options="client as client.altamira + ' | ' + client.name + ' ' + client.lastName for client in vm.clients"
                     class="form-control" >
                     <option value=""></option>
             </select>
