--- a/css/style.css
+++ b/css/style.css
@@ -632,8 +632,8 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 .btn-primary:active:hover,
 .btn-primary.active:hover,
 .btn-primary.active:focus {
-  background-color: #18a689;
-  border-color: #18a689;
+  background-color: gray;
+  border-color: gray;
   color: #FFFFFF;
 }
 .btn-primary:active,
