--- a/views/meetings_search.html
+++ b/views/meetings_search.html
@@ -41,9 +41,9 @@
                                     <label class="col-lg-2 control-label">Cliente</label>
                                     <div class="col-lg-10">
                                         <select chosen 
-                                        data-placeholder="Seleccione cliente"
+                                        data-placeholder="Seleccione cliente o Id"
                                         ng-model="vm.search.client"
-                                        ng-options="client as client.name + ' ' + client.lastName for client in vm.clients"
+                                        ng-options="client as client.altamira + ' | ' + client.name + ' ' + client.lastName for client in vm.clients"
                                         class="form-control" >
                                         <option value=""></option>
                                     </select>
