--- a/views/templates/newMeetingFormLittle.html
+++ b/views/templates/newMeetingFormLittle.html
@@ -49,7 +49,7 @@
         <div class="col-lg-12">
             <label class="control-label">Clientes</label>
             <select chosen 
-                    data-placeholder="Seleccione cliente o Id Altamira"
+                    data-placeholder="Seleccione cliente o Id"
                     ng-model="vm.form.client"
                     ng-options="client as client.altamira + ' | ' + client.name + ' ' + client.lastName for client in vm.clients"
                     class="form-control" >
