Pantalla de detalle de chat terminada

--- a/views/chat_view.html
+++ b/views/chat_view.html
@@ -32,7 +32,7 @@
                 <div class="ibox-content">
 
                     <div class="row">
-                        <div class="col-lg-6 col-lg-offset-6">
+                        <div class="col-lg-5 col-lg-offset-6">
                             <div class="input-group">
 
                                 
@@ -43,7 +43,7 @@
 
 
                                 <div class="input-group-btn">
-                                    <button data-toggle="dropdown" class="btn btn-white dropdown-toggle" type="button">¿Dónde buscar? <span class="caret"></span></button>
+                                    <button data-toggle="dropdown" class="btn btn-white dropdown-toggle" type="button">en: <span class="caret"></span></button>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">Buscar en esta conversación</a></li>
                                         <li><a href="#">Buscar en conversaciones</a></li>
@@ -98,8 +98,23 @@
                         </div>
                     </div>
 
+                    
+
 
                 </div>
+                <br/>
+                <div class="row">
+                        <div class="col-md-6">
+                            <button type="button" class="btn btn-success btn-morado"><i class="fa fa-mail-reply"></i>  Reenviar conversación</button>
+
+                            <button type="button" class="btn btn-success btn-gris"><i class="fa fa-upload"></i>  Adjuntar archivo</button>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="pull-right">
+                                <button type="submit" class="btn btn-success" ng-click=""><i class="fa fa-check"></i> Enviar</button>
+                            </div>
+                        </div>
+                    </div>
 
             </div>
         </div>
@@ -109,87 +124,3 @@
 
 </div>
 
-<div class="small-chat-box ng-small-chat fadeInRight animated" ng-show="openChat">
-
-    <div class="heading" draggable="true">
-        <small class="chat-date pull-right">
-            02.19.2015
-        </small>
-        Small chat
-    </div>
-
-    <div class="content" chat-slim-scroll>
-
-        <div class="left">
-            <div class="author-name">
-                Monica Jackson <small class="chat-date">
-                10:02 am
-            </small>
-        </div>
-        <div class="chat-message active">
-            Lorem Ipsum is simply dummy text input.
-        </div>
-
-    </div>
-    <div class="right">
-        <div class="author-name">
-            Mick Smith
-            <small class="chat-date">
-                11:24 am
-            </small>
-        </div>
-        <div class="chat-message">
-            Lorem Ipsum is simpl.
-        </div>
-    </div>
-    <div class="left">
-        <div class="author-name">
-            Alice Novak
-            <small class="chat-date">
-                08:45 pm
-            </small>
-        </div>
-        <div class="chat-message active">
-            Check this stock char.
-        </div>
-    </div>
-    <div class="right">
-        <div class="author-name">
-            Anna Lamson
-            <small class="chat-date">
-                11:24 am
-            </small>
-        </div>
-        <div class="chat-message">
-            The standard chunk of Lorem Ipsum
-        </div>
-    </div>
-    <div class="left">
-        <div class="author-name">
-            Mick Lane
-            <small class="chat-date">
-                08:45 pm
-            </small>
-        </div>
-        <div class="chat-message active">
-            I belive that. Lorem Ipsum is simply dummy text.
-        </div>
-    </div>
-
-
-</div>
-<div class="form-chat">
-    <div class="input-group input-group-sm"><input type="text" class="form-control"> <span class="input-group-btn"> <button
-        class="btn btn-primary" type="button">Enviar
-    </button> </span></div>
-</div>
-
-</div>
-<div id="small-chat" ng-click="openChat = !openChat">
-
-    <span class="badge badge-warning pull-right">5</span>
-    <a class="open-small-chat">
-        <i class="fa fa-comments"></i>
-
-    </a>
-</div>
