--- a/css/custom.css
+++ b/css/custom.css
@@ -30,3 +30,11 @@ body {
     background-color: #153F6F;
     border-color: #153F6F;
 }
+
+/* BOTONES */
+.btn-morado {
+    background-color: #688EBD;
+}
+.btn-gris {
+    background-color: #6E757F;
+}
