--- a/views/meetings_edit.html
+++ b/views/meetings_edit.html
@@ -21,7 +21,7 @@
 </div>
 <div class="wrapper wrapper-content  animated fadeInRight" ng-controller="MeetingsCtrl">
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-12">
             <div class="ibox">
 
                 <div class="ibox-title">
@@ -36,12 +36,12 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
     </div>
+
+    
+
+    <my-calendar></my-calendar>
+
 </div>
 
 
