--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -23,11 +23,13 @@
                     
                 </div>
                 <div class="logo-element">
-                    IN+
+                    MB
                 </div>
             </li>
             
-
+            <li ui-sref-active="active">
+                <a ui-sref="app.desktop"><i class="fa fa-th-large"></i> <span class="nav-label">Escritorio</span> </a>
+            </li>
 
             <li ui-sref-active="active">
                 <a ui-sref="app.calendar"><i class="fa fa-table"></i> <span class="nav-label">Calendario</span> </a>
