--- a/views/templates/calendar.html
+++ b/views/templates/calendar.html
@@ -6,7 +6,7 @@
             </div>
             <div class="ibox-content">
 
-                <div id="minicalendar-quitaesto"></div>
+                <div id="minicalendar"></div>
             </div>
         </div>
 
@@ -43,8 +43,8 @@
 <script>
   $(document).ready(function () {
     $('#minicalendar').eCalendar({
-        weekDays: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
-        months: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
+        weekDays: ['Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab', 'Dom'],
+        months: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
         textArrows: {previous: '<', next: '>'},
         eventTitle: 'Calendario',
         url: '',
