--- a/css/jquery.e-calendar.css
+++ b/css/jquery.e-calendar.css
@@ -23,13 +23,13 @@
 }
 
 .c-grid {
-    box-shadow: 2px 2px 5px #888888;
+    /* box-shadow: 2px 2px 5px #888888; */
     height: inherit;
 }
 .c-day {
     width: 14.28%;
     height: 13%;
-    background-color: #EFF4F9;
+    background-color: none;
     float: left;
     text-align: center;
 }
@@ -40,7 +40,7 @@
     background-color: #FFF;
     float: left;
     text-align: center;
-    color: gray;
+    color: #F5F5F5;
 }
 
 .c-day-next-month {
@@ -49,7 +49,7 @@
     background-color: #FFF;
     float: left;
     text-align: center;
-    color: gray;
+    color: #F5F5F5;
 }
 
 .c-week-day {
