--- a/css/custom.css
+++ b/css/custom.css
@@ -12,8 +12,19 @@ body {
     background: none;
 }
 
+/* ICONOS MENÚ RESPONSIVE */
+body.mini-navbar .navbar-default .nav > li > a {
+    font-size: 25px;
+}
+@media(max-width: 800px) {
+    .logo-column {
+        display: none;
+    }    
+}
 
-/* Logo */
+
+
+/* LOGO */
 .logo-container {
     text-align: center;
 }
