--- a/views/chat_view.html
+++ b/views/chat_view.html
@@ -26,7 +26,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="text-muted small pull-right">  </span>
-                    <h2>Conversando con: {{vm.chat.client.name}} {{vm.chat.client.lastName}}</h2>
+                    <h2>Conversando con: <span class="azul1">{{vm.chat.client.name}} {{vm.chat.client.lastName}}</span></h2>
                 </div>
 
                 <div class="ibox-content">
