--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
             <img src="/img/logo-login.png" alt="Morabanc" style="max-width: 100%;">    
         </div>
         
-        <p>Bienvenid@ a la herramienta de gestión</p>
+        <p>Bienvenid@ a la herramienta de gestión de citas y chats de DigitalBanking</p>
         <form class="m-t" role="form" action="#">
             <div class="form-group">
                 <input type="email" class="form-control" placeholder="Usuario" required="">
