--- a/views/templates/newMeetingForm.html
+++ b/views/templates/newMeetingForm.html
@@ -73,7 +73,7 @@
         <div class="col-lg-offset-2 col-lg-10 pull-right">
             <div class="pull-right">
                 <button type="submit" class="btn btn-w-m btn-success" ng-click="vm.submitForm();"><i class="fa fa-check"></i> Crear cita</button>
-                <button type="button" class="btn btn-outline btn-success"><i class="fa fa-ban"></i> Cancelar</button>
+                <button type="button" class="btn btn-gris"><i class="fa fa-ban"></i> Cancelar</button>
             </div>
         </div>
     </div>
