--- a/css/custom.css
+++ b/css/custom.css
@@ -46,10 +46,12 @@ body.mini-navbar .navbar-default .nav > li > a {
 .btn-morado {
     background-color: #688EBD;
     border-color: #688EBD;
+    color: white;
 }
 .btn-gris {
     background-color: #6E757F;
     border-color: #688EBD;
+    color: white;
 }
 
 /* BAQUETONES DE ESCRITORIO */
@@ -73,9 +75,43 @@ body.mini-navbar .navbar-default .nav > li > a {
 .azul1 {
     color: #2587C8;
 }
+.azul2 {
+    color: #143f6f;
+}
 .naranja {
     color: #F9B062; 
 }
 .rojo {
     color: red;
+}
+
+/* MENSAJES */
+.message {
+    background-color: inherit !important;
+    padding: 0 !important;
+    border: none !important;
+}
+.message a {
+    color: #fff;
+    text-decoration: underline;
+}
+.alert-chat {
+    color: #fff;
+    background-color: #649ECC;
+    border-color: #649ECC;
+}
+.alert-calendar {
+    color: #fff;
+    background-color: #2A4F7B;
+    border-color: #2A4F7B;
+}
+.alert-message {
+    color: #fff;
+    background-color: #4D5258;
+    border-color: #4D5258;
+}
+
+/* RESULTADO DE BÚSQUEDAS */
+.search-result a.search-link {
+    color: #000;
 }
