--- a/views/chats.html
+++ b/views/chats.html
@@ -42,19 +42,19 @@
                     </div>
                     
 
-                    <div class="clients-list">
+                    <div class="">
 
 
                         <div class="full-height-scroll" full-scroll>
                             <div class="table-responsive">
-                                <table class="table table-striped table-hover footable" data-page-size="5">
+                                <table class="table table-hover footable" data-page-size="5">
 
 
 
 
                                     <thead>
                                         <tr>
-                                            <th style="width: 40px;" data-sort-ignore="true"></th>
+                                            
                                             <th style="width: 40px;" data-sort-ignore="true"></th>
                                             <th >Cliente</th>
                                             <th data-sort-initial="descending" style="width: 150px;" >Fecha</th>
@@ -72,9 +72,9 @@
 
 
                                         <tr ng-repeat="item in vm.chats">
-                                            <td><input type="checkbox"></td>
+                                            
                                             <td class="client-avatar"><img alt="image" src="{{item.client.photo}}"> </td>
-                                            <td><a class="client-link" ui-sref="chats.view({id: item.id})">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.lastMessage}}</small></td>
+                                            <td><a class="client-link azul2" ui-sref="chats.view({id: item.id})">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.lastMessage}}</small></td>
                                             <td>{{item.date}}</td>
                                             <td>{{item.time}}</td>
                                             <td align="center">
@@ -82,7 +82,7 @@
                                                 <span ng-if="item.messagesUnread < 1"><i class="fa fa-envelope-o" style="font-size: 1.5em;"></i></span>
                                             </td>
                                             <td align="center">
-                                                <span ng-if="item.star > 0"><i class="fa fa-star-o" style="font-size: 2.0em; "></i></span>
+                                                <span ng-if="item.star > 0"><i class="fa fa-star-o" style="font-size: 2.0em; color: #E0E0E0;"></i></span>
                                                 <span ng-if="item.star < 1"><i class="fa fa-star" style="font-size: 2.0em; color: orange;"></i></span>
                                             </td>
                                             <td>
