--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -11,11 +11,11 @@
             <li class="nav-header">
 
                 <div class="dropdown profile-element" dropdown>
-                    <img alt="image" class="img-circle" src="img/profile_small.jpg"/>
+                    <img alt="image" class="img-circle" src="img/marcos-navarro.jpg" style="max-width: 60px;"/>
                     <a class="dropdown-toggle" dropdown-toggle href>
                             <span class="clear">
                                 <span class="block m-t-xs">
-                                    <strong class="font-bold">David Williams</strong>
+                                    <strong class="font-bold">Marcos Navarro</strong>
                              </span>
                                 
                             </span>
@@ -28,15 +28,15 @@
             </li>
             
             <li ui-sref-active="active">
-                <a ui-sref="app.desktop"><i class="fa fa-th-large"></i> <span class="nav-label">Escritorio</span> </a>
+                <a ui-sref="app.desktop"><i class="fa fa-th-large"></i> <span class="nav-label">ESCRITORIO</span> </a>
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="app.calendar"><i class="fa fa-table"></i> <span class="nav-label">Calendario</span> </a>
+                <a ui-sref="app.calendar"><i class="fa fa-table"></i> <span class="nav-label">CALENDARIO</span> </a>
             </li>
 
             <li ng-class="{active: $state.includes('meetings')}">
-                <a ui-sref="meetings.index"><i class="fa fa-edit"></i> <span class="nav-label">Citas</span> </a>
+                <a ui-sref="meetings.index"><i class="fa fa-edit"></i> <span class="nav-label">CITAS</span> </a>
                 <ul class="nav nav-second-level" ng-class="{in: $state.includes('meetings')}">
                     <li ui-sref-active="active"><a ui-sref="meetings.index">Listado de citas</a></li>
                     <li ui-sref-active="active"><a ui-sref="meetings.new">Crear cita</a></li>
@@ -45,7 +45,7 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="chats.index"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
+                <a ui-sref="chats.index"><i class="fa fa-laptop"></i> <span class="nav-label">MENSAJES</span> </a>
             </li>
 
             
