--- a/views/meetings.html
+++ b/views/meetings.html
@@ -34,12 +34,12 @@
                     
                     
                     
-                    <div class="clients-list">
+                    <div class="">
 
 
                         <div class="full-height-scroll" full-scroll>
                             <div class="table-responsive">
-                                <table class="table table-striped table-hover footable" data-page-size="5">
+                                <table class="table table-hover footable" data-page-size="5">
 
 
 
@@ -53,7 +53,8 @@
                                             <th style="width: 150px;" >Hora</th>
                                             <th style="" data-sort-ignore="true">Contacto</th>
                                             <th style="" data-sort-ignore="true"></th>
-                                            <th data-sort-ignore="true"></th>
+                                            <th data-sort-ignore="true">Asignar</th>
+                                            <th data-sort-ignore="true">Chat</th>
                                         </tr>
                                     </thead>
 
@@ -74,9 +75,12 @@
                                             <td>
 
                                                 <button type="button" class="btn btn-w-m btn-success"><i class="fa fa-check"></i> Asignar cita</button>
-                                                <button type="button" class="btn btn-outline btn-success"><i class="fa fa-comments-o"></i> Chat</button>
+                                                
                                                 
 
+                                            </td>
+                                            <td>
+                                                <button type="button" class="btn btn-gris"><i class="fa fa-comments-o"></i> Chat</button>
                                             </td>
                                         </tr>
 
@@ -106,4 +110,38 @@
 
   </div>
 </div>
+
+
+<script>
+    function showMessages() {
+        var txt = 'Tiene 3 nuevas conversaciones. <br/> <a href="">Click aquí para ver</a>';
+        
+        $.toaster({ 
+            priority : 'chat', 
+            title : 'NUEVA CONVERSACIÓN', 
+            message : txt,
+            icon: 'fa-comments'
+        });
+
+        $.toaster({ 
+            priority : 'calendar', 
+            title : 'NUEVA CONVERSACIÓN', 
+            message : txt,
+            icon: 'fa-calendar'
+        });
+
+        $.toaster({ 
+            priority : 'message', 
+            title : 'NUEVA CONVERSACIÓN', 
+            message : txt,
+            icon: 'fa-envelope-o'
+        });
+
+    }
+
+    setTimeout(showMessages, 1000);    
+
+    
+    
+</script>
 
