--- a/views/meetings_search.html
+++ b/views/meetings_search.html
@@ -53,22 +53,22 @@
                             <div class="form-group">
                                 <label class="col-lg-2 control-label">Asunto</label>
                                 <div class="col-lg-10">
-                                    <input ng-model="vm.search.subject" type="text" placeholder="Asunto" class="form-control">
+                                    <input ng-model="vm.search.subject" type="text" placeholder="Indique el título o el asunto" class="form-control">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label class="col-lg-2 control-label">Descripción</label>
                                 <div class="col-lg-10">
-                                    <input ng-model="vm.search.description" type="text" placeholder="Descripción" class="form-control">
+                                    <input ng-model="vm.search.description" type="text" placeholder="Indique la descripción" class="form-control">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-lg-offset-2 col-lg-10 pull-right">
                                     <div class="pull-right">
-                                        <button type="button" class="btn btn-w-m btn-success" ng-click="vm.doSearch()"><i class="fa fa-check"></i> Buscar</button>
-                                        <button type="button" class="btn btn-outline btn-success" ng-click="vm.cancelSearh()"><i class="fa fa-ban"></i> Cancelar</button>
+                                        <button type="button" class="btn btn-w-m btn-success" ng-click="vm.doSearch()"><i class="fa fa-search"></i> Buscar</button>
+                                        <button type="button" class="btn btn-gris" ng-click="vm.cancelSearh()"><i class="fa fa-ban"></i> Cancelar</button>
                                     </div>
                                 </div>
                             </div>
@@ -107,12 +107,12 @@
 
 
 
-                <div class="clients-list">
+                <div class="">
 
 
                     <div class="full-height-scroll" full-scroll>
                         <div class="table-responsive">
-                            <table class="table table-striped table-hover footable" data-page-size="5">
+                            <table class="table table-hover footable" data-page-size="5">
 
 
 
