--- a/views/chat_view.html
+++ b/views/chat_view.html
@@ -35,7 +35,7 @@
                         <div class="col-lg-5 col-lg-offset-6">
                             <div class="input-group">
 
-                                
+
 
                                 <input type="text" placeholder="Buscar" class="input form-control">
                                 
@@ -70,13 +70,21 @@
 
                     <div class="row">
 
+                    <div class="col-md-3 responsive">
+                            <div class="chat-users">
+
+                                <managers-list></managers-list>
+
+                            </div>
+                        </div>
+
                         <div class="col-md-9 ">
                             <div class="chat-discussion">
                                 <messages-list></messages-list>
                             </div>
                         </div>
                         
-                        <div class="col-md-3">
+                        <div class="col-md-3 noresponsive">
                             <div class="chat-users">
 
                                 <managers-list></managers-list>
@@ -102,19 +110,34 @@
 
 
                 </div>
+                
                 <br/>
-                <div class="row">
-                        <div class="col-md-6">
-                            <button type="button" class="btn btn-success btn-morado"><i class="fa fa-mail-reply"></i>  Reenviar conversación</button>
 
-                            <button type="button" class="btn btn-success btn-gris"><i class="fa fa-upload"></i>  Adjuntar archivo</button>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="pull-right">
-                                <button type="submit" class="btn btn-success" ng-click=""><i class="fa fa-check"></i> Enviar</button>
-                            </div>
+                <div class="row noresponsive">
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-success btn-morado"><i class="fa fa-mail-reply"></i>  Reenviar conversación</button>
+
+                        <button type="button" class="btn btn-success btn-gris"><i class="fa fa-upload"></i>  Adjuntar archivo</button>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="pull-right">
+                            <button type="submit" class="btn btn-success" ng-click=""><i class="fa fa-check"></i> Enviar</button>
                         </div>
                     </div>
+                </div>
+
+                <div class="row responsive">
+                    <div class="col-md-6 col-xs-6">
+                        <button type="button" class="btn btn-success btn-morado"><i class="fa fa-mail-reply"></i></button>
+
+                        <button type="button" class="btn btn-success btn-gris"><i class="fa fa-upload"></i></button>
+                    </div>
+                    <div class="col-md-6 col-xs-6">
+                        <div class="pull-right">
+                            <button type="submit" class="btn btn-success" ng-click=""><i class="fa fa-check"></i> Enviar</button>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
