--- a/views/common/topnavbar.html
+++ b/views/common/topnavbar.html
@@ -1,6 +1,6 @@
 <div class="row border-bottom">
     <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-        
+
         <div class="navbar-header">
             <span minimaliza-sidebar></span>
             <form role="search" class="navbar-form-custom" method="post" action="views/search_results.html">
@@ -12,6 +12,110 @@
 
 
         <ul class="nav navbar-top-links navbar-right">
+            <li>
+                <span class="m-r-sm text-muted welcome-message">Bienvenido Marcos</span>
+            </li>
+
+            <li class="dropdown" dropdown>
+                <a class="dropdown-toggle count-info" href dropdown-toggle>
+                    <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
+                </a>
+                <ul class="dropdown-menu dropdown-messages">
+                    <li>
+                        <div class="dropdown-messages-box">
+                            <a ui-sref="profile" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a7.jpg">
+                            </a>
+
+                            <div>
+                                <small class="pull-right"></small>
+                                <strong>Mike Loreipsum</strong> le envió un mensaje. <br>
+                                <small class="text-muted">hace 3 días 7:58 pm - 10.06.2014</small>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <div class="dropdown-messages-box">
+                            <a ui-sref="profile" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a4.jpg">
+                            </a>
+
+                            <div>
+                                <small class="pull-right text-navy"></small>
+                                <strong>Chris Johnatan Overtunk</strong> le envió un mensaje.<br>
+                                <small class="text-muted">Ayer 1:21 pm - 11.06.2014</small>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <div class="dropdown-messages-box">
+                            <a ui-sref="profile" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/profile.jpg">
+                            </a>
+
+                            <div>
+                                <small class="pull-right"></small>
+                                <strong>Monica Smith</strong> le envió un mensaje. <br>
+                                <small class="text-muted">hace 2 días 2:30 am - 11.06.2014</small>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <div class="text-center link-block">
+                            <a ui-sref="mailbox.inbox">
+                                <i class="fa fa-envelope"></i> <strong>Leer todos los mensajes</strong>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown" dropdown>
+                <a class="dropdown-toggle count-info" href dropdown-toggle>
+                    <i class="fa fa-bell"></i> <span class="label label-primary">8</span>
+                </a>
+                <ul class="dropdown-menu dropdown-alerts">
+                    <li>
+                        <a ui-sref="inbox">
+                            <div>
+                                <i class="fa fa-envelope fa-fw"></i> <strong>16</strong> Mensajes de 3 conversaciones pendientes
+                                <span class="pull-right text-muted small"></span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a ui-sref="profile">
+                            <div>
+                                <i class="fa fa-calendar fa-fw"></i> <strong>3</strong> Solicitudes de cita pendientes
+                                <span class="pull-right text-muted small"></span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a ui-sref="grid_options">
+                            <div>
+                                <i class="fa fa-comments fa-fw"></i> <strong>2</strong> Conversaciones nuevas
+                                <span class="pull-right text-muted small"></span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <div class="text-center link-block">
+                            <a ui-sref="miscellaneous.notify">
+                                <strong>Ver todas</strong>
+                                <i class="fa fa-angle-right"></i>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+
+
             <li>
                 <a ui-sref="login">
                     <i class="fa fa-sign-out"></i> Desconectar
