--- a/views/chat_archive.html
+++ b/views/chat_archive.html
@@ -19,7 +19,7 @@
 
     </div>
 </div>
-<div class="wrapper wrapper-content  animated fadeInRight" ng-controller="MeetingsArchiveCtrl as vm">
+<div class="wrapper wrapper-content  animated fadeInRight" ng-controller="ChatsArchiveCtrl as vm">
     <div class="row">
         <div class="col-sm-8">
             <div class="ibox">
@@ -45,7 +45,7 @@
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Asunto</label>
                             <div class="col-lg-10">
-                                {{vm.form.subject}}
+                                {{vm.form.lastMessage}}
                             </div>
                         </div>
 
@@ -84,7 +84,7 @@
                             <div class="col-lg-offset-2 col-lg-10 pull-right">
                                 <div class="pull-right">
                                     <button type="submit" class="btn btn-w-m btn-success" ng-click="vm.archive();"><i class="fa fa-check"></i> Archivar</button>
-                                    <button type="button" class="btn btn-outline btn-success"><i class="fa fa-ban"></i> Cancelar</button>
+                                    <button type="button" class="btn btn-gris"><i class="fa fa-ban"></i> Cancelar</button>
                                 </div>
                             </div>
                         </div>
