--- a/views/chats.html
+++ b/views/chats.html
@@ -88,7 +88,7 @@
                                             <td>
 
                                                 <button type="button" class="btn btn-outline btn-success"><i class="fa fa-edit"></i> Editar</button>
-                                                <button type="button" class="btn btn-outline btn-success"><i class="fa fa-tasks"></i> Archivar</button>
+                                                <button type="button" class="btn btn-outline btn-success" ui-sref="chats.archive({id: item.id})"><i class="fa fa-tasks"></i> Archivar</button>
                                                 
 
                                             </td>
