Corregidos algunos temas responsive

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar-default navbar-static-side" role="navigation">
-    
+
     <div class="logo-container">
         <img class="logo-column" src="/img/logo.png" >
     </div>
@@ -13,17 +13,17 @@
                 <div class="dropdown profile-element" dropdown>
                     <img alt="image" class="img-circle" src="img/marcos-navarro.jpg" style="max-width: 60px;"/>
                     <a class="dropdown-toggle" dropdown-toggle href>
-                            <span class="clear">
-                                <span class="block m-t-xs">
-                                    <strong class="font-bold">Marcos Navarro</strong>
-                             </span>
-                                
+                        <span class="clear">
+                            <span class="block m-t-xs">
+                                <strong class="font-bold">Marcos Navarro</strong>
                             </span>
+
+                        </span>
                     </a>
                     
                 </div>
                 <div class="logo-element">
-                    MB
+                    <img src="/img/logo-responsive.png" style="width: 100%;">
                 </div>
             </li>
             
