--- a/views/meetings.html
+++ b/views/meetings.html
@@ -50,11 +50,11 @@
                                             <th style="width: 40px;" data-sort-ignore="true"></th>
                                             <th>Cliente</th>
                                             <th style="width: 150px;" data-sort-initial="descending">Fecha</th>
-                                            <th style="width: 150px;" data-hide="phone,tablet">Hora</th>
+                                            <th style="width: 150px;">Hora</th>
                                             <th style="" data-sort-ignore="true" data-hide="phone,tablet">Contacto</th>
                                             <th style="" data-sort-ignore="true" data-hide="phone,tablet"></th>
-                                            <th data-sort-ignore="true">Asignar</th>
-                                            <th data-sort-ignore="true">Chat</th>
+                                            <th data-sort-ignore="true" data-hide="phone,tablet">Asignar</th>
+                                            <th data-sort-ignore="true" data-hide="phone,tablet">Chat</th>
                                         </tr>
                                     </thead>
 
